--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -323,9 +323,16 @@
     "onceAttorneyHasSigned": "Once {{.AllAttorneysFirstNames}} has signed, we'll notify all parities and must legally wait two weeks for any objections. Then we'll add the LPA to the register and send you a copy of the LPA.",
 
     "myLastingPowersOfAttorney": "My lasting powers of attorney",
-    "signed": "Signed",
-    "applicationNumber": "Application number",
-    "viewTheLpaProgress": "View the LPA progress",
+    "myLastingPowersOfAttorneyHint": "On this page you will find all your in-progress and registered LPAs.",
+    "youCanCreateANewLpa": "You can create a new LPA or re-use the details of an LPA to make another one, using the 'Options' button",
+    "createYourFirstLpa": "Oi, you don't have any LPAs. Click the button to create your first one.",
+    "createAnLpa": "Create an LPA",
+    "createAnotherLpa": "Create another LPA",
+    "lpasInProgress": "LPAs in progress",
+    "applicationNumber": "Number",
+    "options": "Options",
+    "lastSaved": "Last saved",
+    "statusTag": "Status tag",
 
     "howShouldAttorneysMakeDecisions": "How do you want your attorneys to make decisions?",
     "howShouldAttorneysMakeDecisionsDetail": "Your choice here is very important as it affects how your LPA can be used. Whichever option you choose, your attorneys must always act in your best interests.",
