--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -219,8 +219,6 @@
     "selectCheckedLpa": "Select that you have checked your LPA and don't wish to make changes",
     "selectHappyToShareLpa": "Select that you are happy to share your LPA with your certificate provider",
     "checkYourLpa": "Check your LPA",
-    "whatIfIWantToMakeChanges": "What if I want to make a change to the LPA?",
-    "whatIfIWantToMakeChangesContent": "<p></p>",
     "idVerifiedTag": "ID Verified",
     "lpaDecisions": "LPA decisions",
     "typeOfLpa": "Type of LPA",
@@ -284,6 +282,7 @@
     "selectConfirmMadeThisLpaOfOwnFreeWill": "Select that you have made this LPA of your own free will",
     "enterSignatureCode": "Enter your signature code",
     "enterCorrectSignatureCode": "Enter the signature code you received",
+    "continueToSigningPage": "Continue to signing page",
 
     "selectYourIdentityOptions": "Select your identity options",
     "selectAllAtLeastThree": "Select all that apply. You must select at least three options.",
