re-add missing trans

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -219,6 +219,7 @@
     "selectCheckedLpa": "Select that you have checked your LPA and don't wish to make changes",
     "selectHappyToShareLpa": "Select that you are happy to share your LPA with your certificate provider",
     "checkYourLpa": "Check your LPA",
+    "youveNowFinishedFillingInTheLpa": "You’ve now finished filling in the LPA. Before you continue, carefully check all the answers.",
     "idVerifiedTag": "ID Verified",
     "lpaDecisions": "LPA decisions",
     "typeOfLpa": "Type of LPA",
