drop unused template vars and test fixes

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -303,6 +303,8 @@
     "enterCorrectSignatureCode": "Welsh",
     "continueToSigningPage": "Welsh",
 
+    "signYourLpa": "Welsh",
+
     "selectYourIdentityOptions": "Welsh",
     "selectAllAtLeastThree": "Welsh",
     "theYoti": "Welsh",
