--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -285,6 +285,8 @@
     "enterCorrectSignatureCode": "Enter the signature code you received",
     "continueToSigningPage": "Continue to signing page",
 
+    "signYourLpa": "Sign your LPA",
+
     "selectYourIdentityOptions": "Select your identity options",
     "selectAllAtLeastThree": "Select all that apply. You must select at least three options.",
     "theYoti": "The Yoti app",
