--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -232,6 +232,7 @@
     "selectCheckedLpa": "Welsh",
     "selectHappyToShareLpa": "Welsh",
     "checkYourLpa": "Gwiriwch eich LPA",
+    "youveNowFinishedFillingInTheLpa": "ych wedi gorffen llenwi’r LPA. Cyn i chi barhau, gwiriwch yr holl atebion yn ofalus.",
     "idVerifiedTag": "Welsh",
     "lpaDecisions": "Penderfyniadau LPA",
     "typeOfLpa": "Math o LPA",
