--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -233,6 +233,7 @@
     "selectHappyToShareLpa": "Welsh",
     "checkYourLpa": "Gwiriwch eich LPA",
     "youveNowFinishedFillingInTheLpa": "ych wedi gorffen llenwi’r LPA. Cyn i chi barhau, gwiriwch yr holl atebion yn ofalus.",
+    "idVerifiedTag": "Welsh",
     "lpaDecisions": "Penderfyniadau LPA",
     "typeOfLpa": "Math o LPA",
     "WhenTheLpaCanBeUsed": "Pryd gall eich atwrneiod ddefnyddio eich LPA",
@@ -244,7 +245,7 @@
         "many": "Welsh",
         "other": "Welsh"
     },
-    "howTheAttorneysMustWorkTogether": "Sut y dylai'ch atwrneiod weithio gyda'i gilydd",
+    "howTheAttorneysMustMakeDecisions": "Sut y dylai'ch atwrneiod weithio gyda'i gilydd",
     "whoAreTheReplacementAttorneys": {
         "one": "Pwy yw eich atwrnai wrth gefn",
         "two": "Welsh",
@@ -301,6 +302,9 @@
     "selectConfirmMadeThisLpaOfOwnFreeWill": "Welsh",
     "enterSignatureCode": "Welsh",
     "enterCorrectSignatureCode": "Welsh",
+    "continueToSigningPage": "Welsh",
+
+    "signYourLpa": "Welsh",
 
     "selectYourIdentityOptions": "Welsh",
     "selectAllAtLeastThree": "Welsh",
