--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -317,6 +317,8 @@
     "submitSignature": "Welsh",
     "selectBothBoxes": "Welsh",
 
+    "witnessingYourSignature": "Welsh",
+
     "selectYourIdentityOptions": "Welsh",
     "selectAllAtLeastThree": "Welsh",
     "theYoti": "Welsh",
