--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -298,6 +298,8 @@
     "submitSignature": "Submit my signature",
     "selectBothBoxes": "You must check both boxes to confirm your signing of the LPA.",
 
+    "witnessingYourSignature": "Witnessing your signature",
+
     "selectYourIdentityOptions": "Select your identity options",
     "selectAllAtLeastThree": "Select all that apply. You must select at least three options.",
     "theYoti": "The Yoti app",
