--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -305,7 +305,16 @@
     "continueToSigningPage": "Welsh",
 
     "signYourLpa": "Welsh",
-    "signYourLpaContent": "<h2 class=\"govuk-heading-m\">Welsh</h2> <p class=\"govuk-body\">Welsh {{ .AllAttorneysFullNames }} welsh</p> <p class=\"govuk-body\">Welsh {{ .AllAttorneysFirstNames }} welsh:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>welsh</li> <li>welsh</li> </ul>",
+    "signYourLpaHeader": "<h2 class=\"govuk-heading-m\">Welsh</h2>",
+    "wantAttorneysToBeAppointed": {
+        "one": "Welsh {{ .AllAttorneysFullNames }} welsh {{ .LpaType }} welsh.",
+        "two": "Welsh {{ .AllAttorneysFullNames }} welsh {{ .LpaType }} welsh.",
+        "few": "Welsh {{ .AllAttorneysFullNames }} welsh {{ .LpaType }} welsh.",
+        "many": "Welsh {{ .AllAttorneysFullNames }} welsh {{ .LpaType }} welsh.",
+        "other": "Welsh {{ .AllAttorneysFullNames }} welsh {{ .LpaType }} welsh."
+    },
+    "explainAttorneysPowersPfa": "<p class=\"govuk-body\">Welsh {{ .AllAttorneysFirstNames }} welsh:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>welsh</li> <li>welsh</li> </ul>",
+    "explainAttorneysPowersHw": "<p class=\"govuk-body\">Welsh {{ .AllAttorneysFirstNames }} welsh:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>welsh</li> <li>welsh</li> </ul>",
     "attorneysCanActOnlyIfAskedWarning": "Welsh {{ .AllAttorneysFullNames }} welsh",
     "attorneysMustFollowMCA": "<p class=\"govuk-body\">Welsh <a class=\"govuk-link\" href=\"https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/921428/Mental-capacity-act-code-of-practice.pdf\">Welsh</a> </p>",
     "formPanelContent": "<h2 class=\"govuk-heading-m govuk-!-margin-bottom-2\">Welsh</h2> <p class=\"govuk-body\">Welsh</p>",
