drop unused var and return trans keys for lpa legal terms

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -23,7 +23,9 @@
     "selectOneOrMoreOptions": "Welsh",
     "answerLater": "Welsh",
     "willDoThisLater": "Welsh",
-    "pfa": "Welsh",
+    "pfaLegalTerm": "welsh",
+    "hwLegalTerm": "welsh",
+    "combinedLegalTerm": "welsh",
     "yes": "Ydw",
     "no": "Na",
     "confirm": "Welsh",
