--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -23,7 +23,9 @@
     "selectOneOrMoreOptions": "Select one or more options.",
     "answerLater": "Answer later",
     "willDoThisLater": "I will do this later",
-    "pfa": "Finances and affairs",
+    "pfaLegalTerm": "finances and affairs",
+    "hwLegalTerm": "personal welfare",
+    "combinedLegalTerm": "finances and affairs and personal welfare",
     "yes": "Yes",
     "no": "No",
     "confirm": "Confirm",
