--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -316,7 +316,9 @@
     "submitSignature": "Welsh",
     "selectBothBoxes": "Welsh",
 
-    "witnessingYourSignature": "Welsh",
+    "witnessYourSignatureHeader": "<h1 class=\"govuk-heading-xl\">Welsh</h1>",
+    "witnessYourSignatureContent": "<p class=\"govuk-body govuk-!-font-weight-bold\">Welsh {{ .CpFullName }}welsh</p> <ol class=\"govuk-list govuk-list--number govuk-list--spaced\"> <li>Welsh {{ .CpFirstNames }} welsh</li> <li>{{ .CpFirstNames }} welsh</li> </ol>",
+    "witnessCodeTimeWarning": "Welsh {{ .CpFirstNames }} welsh",
 
     "selectYourIdentityOptions": "Welsh",
     "selectAllAtLeastThree": "Welsh",
