Add identity option selection pages

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -308,34 +308,30 @@
 
     "witnessingYourSignature": "Witnessing your signature",
 
-    "selectYourIdentityOptions": "Select your identity options",
-    "selectAllAtLeastThree": "Select all that apply. You must select at least three options.",
-    "theYoti": "The Yoti app",
-    "aPassport": "A passport",
-    "aDrivingLicence": "A driving licence",
-    "aGovernmentGatewayAccount": "A government gateway account",
-    "aDwpAccount": "A department for Work and Pensions (DWP) account",
-    "anOnlineBankAccount": "An online bank account",
-    "anOnlineBankAccountHint": "We won't be able to see your your account number, sort code, balance or any transactions",
-    "aUtilityBill": "A utility bill",
-    "aCouncilTaxBill": "A council tax bill",
-    "iWouldLikeSomeoneElseToConfirmMyDetails": "I would like someone else to confirm my details",
-    "iWouldLikeToConfirmMyIdentityInPerson": "I would like to confirm my identity in person",
-    "selectAtLeastThreeIdentityOptions": "Select at least three identity options",
-    "selectValidIdentityOption": "Select from the listed identity options",
-    "selectMoreOptions": "Select more options so we can accurately identify you",
+    "selectYourIdentityOptions": "Select how you will confirm your identity",
+    "pleaseSelectOneFormOfIdentity": "Please select one form of identity from this list",
+    "yourOneLogin": "Your GOV.UK One Login Identity",
+    "yourOneLoginHint": "We'll ask you to sign in to your GOV.UK One Login account so we can confirm your name, address and date of birth. We will not see any other information about you",
+    "postOfficeEasyID": "Post Office EasyID",
+    "postOfficeEasyIDHint": "Post Office EasyID is a secure digital app that lets you confirm your identity online. We'll confirm your name, address and date of birth through Post Office EasyID. We will not see any other information Post Office EasyID holds about you.",
+    "yourPassport": "Your passport",
+    "yourPassportHint": "This must be your current passport or one that expired less than 10 years ago. Your name on your passport must be the same as on your LPA.",
+    "biometricResidencePermit": "UK biometric residence permit (BRP)",
+    "drivingLicencePhotocard": "UK driving licence (photocard)",
+    "drivingLicencePhotocardHint": "This must be your full, current licence or one that expired less than 10 years ago. Your name and address on your licence must be the same as on your LPA.",
+    "drivingLicencePaper": "UK driving licence (paper)",
+    "drivingLicencePaperHint": "This must be your full, current licence or one that expired less than 10 years ago. Your name and address on your licence must be the same as on your LPA.",
+    "aBankAccount": "A bank account",
+    "aBankAccountHint": "We will not access any details from your bank account apart from your name, address and date of birth",
+    "iDoNotHaveEitherOfTheseAccounts": "I do not have either of these types of accounts",
+    "iDoNotHaveAnyOfTheseTypesOfIdentity": "I do not have any of these types of identity",
+    "weWillAdviseOnOtherWays": "We will advise on other ways you can confirm your identity",
+    "selectAnIdentityOption": "Select from the listed options",
 
-    "yourChosenDocuments": "Your chosen documents",
-    "yourChosenDocumentsContent": "You told us that you have the following documents:",
-    "wellConfirmYourIdentityUsing": "We'll confirm your identity using your {{.FirstChoice}} and {{.SecondChoice}} because these will give us the most confidence that you are {{.DonorFirstNames}} {{.DonorLastName}}.",
-    "yoti": "Yoti app",
-    "passport": "passport",
-    "drivingLicence": "driving licence",
-    "governmentGatewayAccount": "government gateway account",
-    "dwpAccount": "department for Work and Pensions (DWP) account",
-    "onlineBankAccount": "online bank account",
-    "utilityBill": "utility bill",
-    "councilTaxBill": "council tax bill",
+    "yourChosenIdentityOptions": "Your chosen identity options",
+    "yourChosenIdentityOptionsContent": "You told us that you have the following things to confirm your identity:",
+    "whenYouAreReadyToCompleteTheIdentityConfirmationChecks": "When you are ready to complete the identity confirmation checks, please press continue.",
+    "yourBankAccount": "your bank account",
 
     "identifyYourselfWithYoti": "Identify yourself with the Yoti app",
     "scanWithTheYotiApp": "Scan with the Yoti app",
