Add identity option selection pages

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -329,33 +329,29 @@
     "witnessCodeTimeWarning": "Welsh {{ .CpFirstNames }} welsh",
 
     "selectYourIdentityOptions": "Dewiswch eich opsiynau i brofi pwy ydych",
-    "selectAllAtLeastThree": "Dewiswch bob un sy'n berthnasol. Rhaid i chi ddewis o leiaf 3 opsiwn.",
-    "theYoti": "Yr ap Yoti",
-    "aPassport": "Pasbort",
-    "aDrivingLicence": "Trwydded yrru",
-    "aGovernmentGatewayAccount": "Cyfrif porth y llywodraeth",
-    "aDwpAccount": "Cyfrif yr Adran Gwaith a Phensiynau (DWP)",
-    "anOnlineBankAccount": "Cyfrif banc ar-lein",
-    "anOnlineBankAccountHint": "Ni fyddwn yn gallu gweld eich rhif cyfrif, cod didoli, balans nac unrhyw drafodion",
-    "aUtilityBill": "Bil cyfleustodau",
-    "aCouncilTaxBill": "Bil treth gyngor",
-    "iWouldLikeSomeoneElseToConfirmMyDetails": "Hoffwn i rywun arall gadarnhau fy manylion",
-    "iWouldLikeToConfirmMyIdentityInPerson": "Hoffwn gadarnhau fy hunaniaeth yn bersonol",
-    "selectAtLeastThreeIdentityOptions": "Dewiswch o leiaf dri opsiwn i brofi pwy ydych",
-    "selectValidIdentityOption": "Dewiswch o'r opsiynau i brofi pwy ydych",
-    "selectMoreOptions": "Dewiswch fwy o opsiynau fel y gallwn eich adnabod yn gywir",
+    "pleaseSelectOneFormOfIdentity": "Welsh",
+    "yourOneLogin": "Welsh",
+    "yourOneLoginHint": "Welsh",
+    "postOfficeEasyID": "Welsh",
+    "postOfficeEasyIDHint": "Welsh",
+    "yourPassport": "Welsh",
+    "yourPassportHint": "Welsh",
+    "biometricResidencePermit": "Welsh",
+    "drivingLicencePhotocard": "Welsh",
+    "drivingLicencePhotocardHint": "Welsh",
+    "drivingLicencePaper": "Welsh",
+    "drivingLicencePaperHint": "Welsh",
+    "aBankAccount": "Welsh",
+    "aBankAccountHint": "Welsh",
+    "iDoNotHaveEitherOfTheseAccounts": "Welsh",
+    "iDoNotHaveAnyOfTheseTypesOfIdentity": "Welsh",
+    "weWillAdviseOnOtherWays": "Welsh",
+    "selectAnIdentityOption": "Welsh",
 
-    "yourChosenDocuments": "Eich dogfennau dewisol",
-    "yourChosenDocumentsContent": "Dywedoch wrthym fod gennych y dogfennau canlynol:",
-    "wellConfirmYourIdentityUsing": "Byddwn yn cadarnhau pwy ydych gan ddefnyddio eich {{.FirstChoice}} a {{.SecondChoice}} oherwydd bydd rhain yn rhoi'r hyder mwyaf i ni mai chi yw {{.DonorFirstNames}} {{.DonorLastName}}.",
-    "yoti": "ap Yoti",
-    "passport": "pasbort",
-    "drivingLicence": "trwydded yrru",
-    "governmentGatewayAccount": "cyfrif porth y llywodraeth",
-    "dwpAccount": "cyfrif yr Adran Gwaith a Phensiynau (DWP)",
-    "onlineBankAccount": "cyfrif banc ar-lein",
-    "utilityBill": "bil cyfleustodau",
-    "councilTaxBill": "bil treth gyngor",
+    "yourChosenIdentityOptions": "Welsh",
+    "yourChosenIdentityOptionsContent": "Welsh",
+    "whenYouAreReadyToCompleteTheIdentityConfirmationChecks": "Welsh",
+    "yourBankAccount": "Welsh",
 
     "identifyYourselfWithYoti": "Profi pwy ydych chi gyda'r ap Yoti",
     "scanWithTheYotiApp": "Sganiwch gyda'r ap Yoti",
